--- a/src/index.css
+++ b/src/index.css
@@ -3,14 +3,18 @@
     margin:0;
     box-sizing:border-box;
 }
-body {
-  margin: 0;
 
+html, body {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    width:fit-content();
+}
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: scroll;
   background-color: #e0e0e0;
   color: #999;
 }
